# paperless-ai-classifier

./: .dependency-age-allowlist  .env.example  .gitignore  .grype.yaml  .hadolint.yaml  .pip-audit-known-vulnerabilities  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  constraints.txt  docker-compose.mcp.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.claude/: settings.json
.claude/commands/: ci-local.md  dep-update.md  precommit.md
.github/workflows/: ci.yml  docker-publish.yml
app/: __init__.py  chat.py  cli.py  config.py  config_writer.py  csrf.py  datefmt.py  db.py  indexer.py  main.py  mcp_server.py  models.py  request_security.py  telegram_handler.py  ui_safety.py  vector_store.py  worker.py
docs/: architecture.md  cli.md  configuration.md  deployment.md  installation.md  mcp.md  security-triage.md  webhooks.md  workflow.md
prompts/: chat_system.txt  classify_system.txt  ocr_correction_system.txt  ocr_vision_full_system.txt  ocr_vision_light_system.txt
scripts/: check_dependency_age.py
tests/: conftest.py  test_chat.py  test_classifier.py  test_cli_process_doc.py  test_cli_reindex_ocr.py  test_cli_reset.py  test_committer.py  test_config.py  test_config_writer.py  test_context_builder.py  test_cors.py  test_csrf.py  test_db.py  test_models.py  test_ocr.py  test_ollama_embed.py  test_pdf_renderer.py  test_retroactive_entities.py  test_routes_correspondents.py  test_routes_doctypes.py  test_routes_inbox_security.py  test_routes_review_bulk.py  test_routes_smoke.py  test_routes_tags.py  test_setup.py  test_webhook.py  test_worker.py
(+55 files in other folders)
