[project]
name = "paperless-ai-classifier"
version = "0.1.0"
description = "AI-based classifier for Paperless-NGX inbox documents using Ollama"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<=0.135.2",
    "starlette<1.0.0",
    "uvicorn[standard]>=0.32.0,<=0.42.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12,<=0.0.22",
    "apscheduler>=3.10.4",
    "structlog>=24.4.0",
    "sqlite-vec>=0.1.3,<=0.1.7",
    "numpy>=2.0.0,<=2.4.4",
    "mcp[cli]>=1.20.0,<=1.26.0",
    "pymupdf>=1.24.0,<=1.27.2.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0,<=0.15.8",
    "pytest>=8.0.0,<=9.0.2",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
